--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,14 @@
     box-sizing: border-box;
 }
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+
 #header {
     background-color: #323131;
-    height: 100px;
+    height: 60px;
     width: 100%;
 }
 
@@ -14,11 +19,12 @@
     background-color: #C4C7B6;
     height: 100px;
     width: 100%;
+    flex: 1 0 auto;
 
 }
 
 #footer {
     background-color: #696867;
-    height: 100px;
+    height: 60px;
     width: 100%;
 }
