--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,49 +12,65 @@ body {
     display: flex;
     flex-direction: column;
 
-/*header rules*/
+    /*header rules*/
+    #header {
+        background-color: #323131;
+        height: 60px;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
 
+    #menu a {
+        color: #ffffff;
+        text-decoration: none;
+        font-family: 'Voltaire', Helvetica, sans-serif;
+    }
 
-#header {
-    background-color: #323131;
-    height: 60px;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-}
+    #menu li {
+        list-style-type: none;
+        letter-spacing: 1px;
+    }
 
-#menu a {
-    color: #ffffff;
-    text-decoration: none;
-    font-family: 'Voltaire', Helvetica, sans-serif;
-}
+    .active {
+        border-bottom: 1px solid #cfcece;
+    }
 
-#menu li {
-    list-style-type: none;
-}
+    #logo {
+        color: #ffffff;
+        text-decoration: none;
+        font-family: 'Tenor Sans', Helvetica, sans-serif;
+        font-size: 200%;
+        text-decoration: none;
+        letter-spacing: 4px;
+    }
 
-#logo {
-    color: #ffffff;
-    text-decoration: none;
-    font-family: 'Tenor Sans', Helvetica, sans-serif;
-    font-size: 200%;
-}
+    #anchor-logo {
+        text-decoration: none;
+    }
 
-.active {
-    border-bottom: 1px solid #cfcece;
-}
+    /*main rules*/
+    #main {
+        background-color: #C4C7B6;
+        height: 100px;
+        width: 100%;
+        flex: 1 0 auto;
+    }
 
-/*main rules*/
-#main {
-    background-color: #C4C7B6;
-    height: 100px;
-    width: 100%;
-    flex: 1 0 auto;
+    /*footer rules*/
+    #footer {
+        background-color: #696867;
+        height: 60px;
+        width: 100%;
+    }
 
-}
-/*footer rules*/
-#footer {
-    background-color: #696867;
-    height: 60px;
-    width: 100%;
-}
+    #social-links i {
+        color: #ffffff;
+    }
+
+    #social-links {
+        display: flex;
+        justify-content: space-evenly;
+        list-style-type: none;
+        padding: 15px 0;
+        font-size: 170%;
