--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,12 +44,42 @@ body {
     font-size: 200%;
     text-decoration: none;
     letter-spacing: 4px;
+    position: absolute;
+    left: 20px;
+    top: 11px;
 }
 
 #anchor-logo {
     text-decoration: none;
     align-self: center;
 
+}
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
+    align-self: center;
+    color: #ffffff;
+    position: absolute;
+    right: 20px;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+nav {
+    display: none;
+    position: absolute;
+    background-color: #323131;
+    width: 120px;
+    margin-top: 58px;
+    right: 20px;
+    border-radius: 2px;
+    padding: 8px;
+    text-align: center;
 }
 
 /*main rules*/
@@ -59,6 +89,15 @@ body {
     width: 100%;
     flex: 1 0 auto;
 }
+
+#picture1 {
+    display: block;
+    width: 100%;
+    height: 200px;
+    background: url("../images/interior/mathilde-langevin-LdPzzJcrPLM-unsplash.jpg") no-repeat center center / cover;
+}
+
+#main-title
 
 /*footer rules*/
 #footer {
