--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ nav {
     flex: 1 0 auto;
 }
 
-#picture1 {
+#banner {
     display: block;
     width: 100%;
     height: 200px;
@@ -107,6 +107,12 @@ nav {
     text-transform: uppercase;
     margin-left: 10%;
     font-size: 200%;
+}
+
+#map {
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 60px;
 }
 
 /*footer rules*/
