form on contact page is starting to take its shape in the html - needs styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Tenor+Sans&family=Voltaire&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Tenor+Sans&family=Voltaire&display=swap');
 
 /*generic rules*/
 * {
