--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,13 +116,20 @@ nav {
     font-size: 200%;
 }
 
-#form {
+#contact-sections {
     padding: 10px;
     font-family: 'Lora';
     line-height: 1.5;
     max-width: 300px;
     text-align: left;
+}
 
+#form-div {
+    border: 2px solid #323131;
+    background-color: #807674;
+    padding: 10px;
+    color: white;
+    border-radius: 30px 10px;
 }
 
 .submit-button {
@@ -134,12 +141,20 @@ nav {
     font-size: medium;
 }
 
-#form-div {
+#address {
+    padding: 10px;
+    border-radius: 30px 10px;
     border: 2px solid #323131;
     background-color: #807674;
+    color: #ffffff;
+}
+
+#emailphone {
     padding: 10px;
-    color: white;
     border-radius: 30px 10px;
+    border: 2px solid #323131;
+    background-color: #807674;
+    color: #ffffff;
 }
 
 /*footer rules*/
