--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,12 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    margin: 0;
+    padding: 0;
     position: relative;
-    min-height: 100vh;
 }
 
 /*header rules*/
@@ -91,9 +91,8 @@ nav {
 /*main rules*/
 #main {
     background-color: #DCD4D1;
-    flex-grow: 1;
-    height: 100vh;
     width: 100%;
+    flex-grow: 1;
     flex: 0 auto;
     flex-direction: column;
 }
@@ -175,6 +174,11 @@ nav {
     list-style-type: none;
     padding: 15px 0;
     font-size: 170%;
+}
+
+#map {
+    width: 100%;
+    height: 300px;
 }
 
 /*responsive design and media queries*/
