--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,10 +116,12 @@ nav {
 }
 
 #contact-sections {
-    padding: 10px;
+    padding-left: 5%;
+    padding-top: 15px;
+    padding-bottom: 10px;
     font-family: 'Lora';
     line-height: 1.5;
-    max-width: 300px;
+    max-width: 95%;
     text-align: left;
 }
 
