--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,24 @@ nav {
     color: #ffffff;
 }
 
+#idart1 {
+    width: 300px;
+    height: 300px;
+    background-color:rgb(55, 41, 159);
+}
+
+#idart2 {
+    width: 300px;
+    height: 300px;
+    background-color: rgb(159, 139, 41);
+}
+
+#idart3 {
+    width: 300px;
+    height: 300px;
+    background-color: rgb(202, 50, 182);
+}
+
 /*footer rules*/
 #footer {
     background-color: #807674;
