--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,13 +161,31 @@ nav {
 #idart1 {
     width: 300px;
     height: 300px;
-    background-color:rgb(55, 41, 159);
+    padding-top: 50px;
+    padding-left: 35px;
 }
 
+#idart1div {
+    width: 80%;
+    height: 180px;
+    background-color: #BDB4AD;
+    font-size: 160%;
+    text-align: center;
+    border: 2px solid #807674;
+    border-radius: 30px 10px;
+}
+
+#idart1div h5 {
+    padding-top: 30px;
+}
+
+
 #idart2 {
-    width: 300px;
     height: 300px;
-    background-color: rgb(159, 139, 41);
+    background: url('../images/interior/spacejoy-RUvW1KGD9a4-unsplash (1).jpg') no-repeat center center/cover;
+    border-radius: 10px 30px;
+    margin: 10px;
+    width: 92%;
 }
 
 #idart3 {
