--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,45 @@ nav {
     background-color: rgb(202, 50, 182);
 }
 
+#companybenefits {
+    width: 90%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-left: 20px;
+}
+
+
+#benefit1 {
+    width: 230px;
+    height: 70px;
+    background-color: #000000;
+    border-radius: 30px 10px;
+}
+
+#benefit2 {
+    width: 230px;
+    height: 70px;
+    background-color: #000000;
+    border-radius: 30px 10px;
+}
+
+#benefit3 {
+    width: 230px;
+    height: 70px;
+    background-color: #000000;
+    border-radius: 30px 10px;
+}
+
+.fa-calendar-days, .fa-check, .fa-leaf {
+    color: #ffffff;
+    font-size: 220%;
+    margin-top: 19px;
+    margin-left: 10px;
+}
+
 /*footer rules*/
 #footer {
     background-color: #807674;
