--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,6 @@ nav {
 #idart3 {
     width: 300px;
     height: 300px;
-    background-color: rgb(202, 50, 182);
 }
 
 #companybenefits {
@@ -208,21 +207,21 @@ nav {
 #benefit1 {
     width: 230px;
     height: 70px;
-    background-color: #000000;
+    background-color: #323131;
     border-radius: 30px 10px;
 }
 
 #benefit2 {
     width: 230px;
     height: 70px;
-    background-color: #000000;
+    background-color: #323131;
     border-radius: 30px 10px;
 }
 
 #benefit3 {
     width: 230px;
     height: 70px;
-    background-color: #000000;
+    background-color: #323131;
     border-radius: 30px 10px;
 }
 
@@ -231,6 +230,30 @@ nav {
     font-size: 220%;
     margin-top: 19px;
     margin-left: 10px;
+}
+
+#eco {
+    color: #ffffff;
+    text-align: center;
+    font-size: 140%;
+    margin-top: -31px;
+    margin-right: -32px;
+}
+
+#flexible {
+    color: #ffffff;
+    text-align: center;
+    font-size: 140%;
+    margin-top: -31px;
+    margin-right: -32px;
+}
+
+#review {
+    color: #ffffff;
+    text-align: center;
+    font-size: 140%;
+    margin-top: -31px;
+    margin-right: -30px;
 }
 
 /*footer rules*/
