--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,8 @@ body {
     margin: 0;
     padding: 0;
     position: relative;
+    font-family: 'Voltaire', Helvetica, sans-serif;
+    line-height: 1.7;
 }
 /*Until the media queries, the codes below are mobile-first adapted*/
 /*header*/
@@ -174,10 +176,11 @@ nav {
     text-align: center;
     border: 2px solid #807674;
     border-radius: 30px 10px;
+    margin-left: -20px;
 }
 
 #idart1div h5 {
-    padding-top: 30px;
+    padding-top: 15px;
 }
 
 
@@ -237,7 +240,7 @@ nav {
     color: #ffffff;
     text-align: center;
     font-size: 140%;
-    margin-top: -31px;
+    margin-top: -40px;
     margin-right: -32px;
 }
 
@@ -245,7 +248,7 @@ nav {
     color: #ffffff;
     text-align: center;
     font-size: 140%;
-    margin-top: -31px;
+    margin-top: -40px;
     margin-right: -32px;
 }
 
@@ -253,7 +256,7 @@ nav {
     color: #ffffff;
     text-align: center;
     font-size: 140%;
-    margin-top: -31px;
+    margin-top: -40px;
     margin-right: -30px;
 }
 
