--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,6 +381,10 @@ div img {
 
         }
 
+        #idart1 {
+            margin-left: 400px;
+        }
+
 
 /*bigger screen sizes - 1200px and wider*/
     @media screen and (min-width: 1200px) {
